--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   lottie: ^2.6.0
   bloc: ^8.1.2
   equatable: ^2.0.5
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
+  firebase_analytics: ^10.5.1
+  path: ^1.8.3
+  path_provider: ^2.1.1
+  flutter_bloc: ^8.1.3
   
 
 dev_dependencies:
@@ -64,9 +70,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets\animations\login_view.json
-    - assets\images\book.png
+  # assets:
+    # - assets\animations\login_view.json
+
+    # - assets\images\book.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
