--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,11 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.1
   flutter_bloc: ^8.1.3
-  
+  http: ^1.1.0
+  printing: ^5.11.0
+  pdf: ^3.10.4
+  flutter_pdfview: any
+
 
 dev_dependencies:
   flutter_test:
